--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "-": "0.0.1",
+        "g": "^2.0.1",
+        "npm": "^7.22.0"
     }
 }
